2006-03-07  Stefan Seefeld  <stefan@codesourcery.com>

	* qm/test/classes/compiler_table.py: Fix search for host
	extension to include database-specific path.

2005-12-02  Stefan Seefeld  <stefan@codesourcery.com>

	* qm/__init__.py: Define new extension_path variable.
	* qm/test/base.py: Use it to lookup QMTest extensions.
	* qm/dist/__init__.py: Provide build infrastructure to install 
	qmtest extensions.
	* qm/dist/distribution.py: Likewise.
	* qm/dist/command/__init__.py: Likewise.
	* qm/dist/command/build_extensions.py: Likewise.
	* qm/dist/command/install_extensions.py: Likewise.
	* setup.py: Install it.
	* qmdist/command/install_data.py: Likewise.

2005-12-01  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/cmdline.py (QMTest.__ExecuteSummarize): Print resource
	results for UNTESTED tests.
	
	* qm/test/classes/compiler_table.py: Provide standard names for
	the C and C++ programming languages.

2005-11-30  Mark Mitchell  <mark@codesourcery.com>

	* qm/extension.py (get_extension_class_name): Use only the final
	component of the module in forming the extension class name.  
	* qm/test/database.py (Database.GetIds): Handle generic
	databases. 

	* qm/test/classes/compiler_test.py (CompilationStep): Provide
	default values.
	(CompilerBase._MakeDirectory): Do not create the temporary build
	directory if it already exists.
	(CompilerTest.Run): Create the temporary build directory.  Record
	the output from the compiler here.
	(CompilerTest._GetExecutableArguments): New function.
	(CompilerTest._MustExecutableExitSuccessfully): New function.
	(CompilerTest._RunExecutable): Use new functions.
	(CompilerTest._CheckOutput): Do not record the output here.
	Adjust use of _DiagnosticsToString.
	(CompilerTest._CheckExecutableOutput): New function.
	(CompilerTest._DiagnosticsToString): Add annotation parameter.

	* qm/test/classes/compiler.py (Compiler.ParseOutput): Do not try
	to match an error message against multiple severities.
